resources/testcases_static_checks/tests/positive/isLinear/inf-chain.rls
../../../tests_common_data/rule-classification-examples/inf-chain.rls