resources/testcases_static_checks/tests/negative/isDmfc/inducedConstantMappingNeedsToBeInjective-skolemVersion.rls
../../../tests_common_data/critical-examples/inducedConstantMappingNeedsToBeInjective-skolemVersion.rls